# kongsberg

agents/: agent_1_basic.py  agent_1_basic_vpre1.py  agent_2_multitool.py  agent_2_multitool.vpre1.py  agent_3_memory.py  agent_3_memory.vpre1.py  agent_4_langgraph.py  agent_4_langgraph.vpre1.py
py-rag-demo/: .gitignore  build_index.py  pyproject.toml  query_rag.py
